--- a/html/index.html
+++ b/html/index.html
@@ -50,7 +50,7 @@
             <div class="row">
                 <div class="col-md-6 d-flex">
                     <div class="align-self-center">
-                        <h1 class="display-4">Projeto Helenos</h1>
+                        <h1 class="display-4">O Totem</h1>
                         <p>
                             A junção de vários grupos trabalhando por um mundo melhor, com mais empatia e ajuda ao próximo. Ninguém está sozinho! :)
                         </p>
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="col-md-6 d-none d-md-block">
-                    <!-- <img src="../img/logo_grande.png"> -->
+                    <img src="../img/OTotem.png" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <img src="../img/empresas.png" class="img-fluid">
+                        <img src="../img/VanBook.png" class="img-fluid">
                     </div>
                 </div> <!-- Fim .row -->
             </div>
@@ -89,14 +89,13 @@
             <div class="card">
                 <div class="row">
                     <div class="col-md-6">
-                        <img src="../img/logo_jogo.png" class="img-fluid">
+                        <img src="../img/OTotem.png" class="img-fluid">
                     </div>
                     <div class="col-md-6 d-flex">
                         <div class="align-self-center">
                             <h2>Projeto do Jogo</h2>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia totam assumenda dolores
-                                nobis eveniet temporibus.
+                                A ideia principal do nosso jogo é, a partir de uma releitura das obras de Van Gogh, criar um ambiente rico e vivo e que conte a história dos personagens de forma cativante, enquanto, de forma séria, abordamos assuntos como depressão e ansiedade com o intuíto de gerar um ambiente legal para nossos jogadores.
                             </p>
                         </div>
                     </div>
@@ -120,8 +119,10 @@
                         <a href="pantora.html" class="btn btn-primary w-100" target="_blank" rel="noreferrer noopener">Pantora</a>
                     </div>
                     <div class="col-md-4">
-                        <img src="../img/helenos.png" class="img-fluid">
-                        <h4>Helenos - TCC</h4>
+                        <div class= "">
+                            <img src="../img/OTotem.png" class="img-fluid w-100 h-100">
+                        </div>
+                        <h4>O Totem</h4>
                         <p>
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. In omnis quae laboriosam eligendi
                             reiciendis corporis ipsum minus commodi!
