--- a/html/pantora.html
+++ b/html/pantora.html
@@ -47,6 +47,100 @@
         </nav>
     </header>
 
+    <section class="caixa">
+        <div class="container">
+            <div class="display-2 mb-3"><u>Equipe Técnica</u></div>
+            <div class="row">
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h2>Luiz Palma</h2>
+                        <p>
+                            Sou o <strong>Luiz Palma</strong> e sou um atenienses.<br>
+                            Sou um dos responsáveis por programar o jogo e líder do lado claro da força.<br>
+                            <hr class="linha">
+                            <strong>Sobre Mim:</strong> Desde sempre jogo video games, é meu passa-tempo favorito. Eu
+                            lembro como se fosse ontem do dia que eu ganhei meu primeiro video game: um <strong>Mega
+                                Drive</strong>. Sonic The Hedgehog, Spider Man e Super Monaco GP eram minhas fitas
+                            favoritas.<br>
+                            Esse amor por jogos fez com que eu me interessase ainda mais pela área da programação, que
+                            também, é por onde pretendo seguir daqui pra frente!
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <!-- <img src="../img/luiz.png" class="img-fluid"> -->
+                </div>
+            </div> <!-- Fim .row -->
+            <div class="espacador"></div>
+
+            <div class="row">
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h2>Mateus Felix</h2>
+                        <p>
+                            Sou o <strong>Mateus Felix</strong> e sou um atenienses.<br>
+                            Sou um dos responsáveis por programar o jogo.<br>
+                            <hr class="linha">
+                            <strong>Sobre mim:</strong> gosto muito da área e pretendo continuar.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <!-- <img src="../img/mateus.png" class="img-fluid"> -->
+                </div>
+            </div> <!-- /.row -->
+
+            <div class="espacador"></div>
+
+            <div class="row">
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h2>Leonardo Quadrini</h2>
+                        <p>
+                            Sou o <strong>Leonardo Quadrini</strong> e sou um atenienses.<br>
+                            Sou o roteirista chefe, responsável pela elaboração e construção
+                            da história do jogo, tal como escrever a monografia do TCC.<br>
+                            <hr class="linha">
+                            <strong>Sobre Mim:</strong> Gosto muito de escrever desde que me
+                            entendo por gente, na escola quando pequeno sempre gostei de escrever histórias de aventura.
+                            Assim como escrever, sempre fui apaixonado por jogos, suas histórias, artes e infinitas
+                            possibilidades de mundos que podem ser criados, trazendo uma imersão praticamente impossível
+                            de ser alcançada com filmes e/ou séries.<br>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <!-- <img src="../img/leonardo.png" class="img-fluid"> -->
+                </div>
+            </div> <!-- Fim .row -->
+
+            <div class="espacador"></div>
+
+            <div class="row">
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h2>Lucas Aoki</h2>
+                        <p>
+                            Sou o <strong>Lucas Aoki</strong> e sou um atenienses.<br>
+                            Sou o Co-escritor, responsável por auxiliar o escritor a desempenhar seu papel sem erros
+                            <hr class="linha">
+                            <strong>Sobre mim:</strong> sou um grande fã de jogos, e minha parte favorita neles
+                            normalmente é o storytelling, principalmente quando a história está sendo contada por
+                            elemento em volta do
+                            personagem, meu jogo favorito é Minecraft, pelo fato de utilizar esse fator muito bem, as
+                            mecânicas do jogo não ficam muito atrás.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <!-- <img src="../img/lucas.png" class="img-fluid"> -->
+                </div>
+            </div> <!-- Fim .row -->
+
+        </div> <!-- /.container -->
+
+    </section>
+
     <footer class="mt-4 p-4 bg-warning">
         <div class="d-flex justify-content-center">
             <p>
