Pantora e Cerferus atualizadas

--- a/html/cerferus.html
+++ b/html/cerferus.html
@@ -47,6 +47,120 @@
         </nav>
     </header>
 
+    <section id="home">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <div class="display-2 mb-3"><u>Equipe Artística</u></div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <img src="../img/Cerferus_Logo.png" alt="Cerferus" class="img-fluid">
+                </div>
+            </div> <!-- Fim .row -->
+        </div>
+    </section>
+
+    <section class="caixa">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h2>Samir Leno</h2>
+                        <p>
+                            Sou o <strong>Samir Leno</strong> e sou um espartano.<br>
+                            Sou o responsável por criar o desing dos personagens, cenário e criar logos. Também sou o
+                            auxiliar de música da equipe.
+                            <hr class="linha">
+                            <strong>Sobre mim:</strong> comecei a desenhar de maneira mais frequente a partir dos 11
+                            anos de idade e venho tentando melhorar minhas habilidades nesses últimos 5 anos. <br>
+                            Ganhei meu violão com 8 anos de idade e comecei a tratar ele como um instrumento de fato a
+                            partir dos 12 anos, venho estudando o instrumento desde lá, aos 14 anos eu migrei e me
+                            encontrei no baixo.
+                        </p>
+                    </div>
+                </div>
+                <!--
+                <div class="col-md-6">
+                    <img src="../img/saiba.png" class="img-fluid">
+                </div>
+            -->
+            </div> <!-- Fim .row -->
+            <div class="espacador"></div>
+
+            <div class="row">
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h2>Gustavo Aragaki</h2>
+                        <p>
+                            Sou o <strong>Gustavo Aragaki</strong> e sou um espartano.<br>
+                            Sou responsável pela animação e design do jogo
+                            <hr class="linha">
+                            <strong>Sobre mim:</strong> Gosto de jogar jogos online, desenhar e assistir animações,
+                            sinto que faço parte desse mundo desde criança. sempre fui apaixonado em jogos, filmes e
+                            desenhos, pois criavam realidades alternativas em que eu podia vivenciar experiências
+                            maravilhosas.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <!-- <img src="../img/" class="img-fluid"> -->
+                </div>
+            </div> <!-- Fim .row -->
+
+            <div class="espacador"></div>
+
+            <div class="row">
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h2>Vitor Leite</h2>
+                        <p>
+                            Sou o <strong>Vitor Leite</strong> e sou um espartano.<br>
+                            Sou responsável por cuidar de toda a parte sonora, desde passos até músicas hambientais.<br>
+                            <hr class="linha">
+                            <strong>Sobre Mim:</strong> Meu passa tempo preferido é jogar vôlei e cantar (apesar de não
+                            ser tão bom cantando ) gosto também de jogos no estilo fps, sendo o principal Valorant,
+                            tenho
+                            Tenho muita vontade de ser dublador e estudar fora.<br>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <!-- <img src="../img/leonardo.png" class="img-fluid"> -->
+                </div>
+            </div> <!-- Fim .row -->
+
+            <div class="espacador"></div>
+
+
+            <div class="row">
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <h2>Marco Antonio</h2>
+                        <p>
+                            Sou o <strong>Marco Antonio</strong> e sou um espartano.<br>
+                            Sou um dos responsáveis por fazer os desenhos ,ajudarei a fazer as animações do
+                            jogo e ficarei encarregado de fazer a edição do trailer do jogo.
+                            <hr class="linha">
+                            <strong>Sobre mim:</strong> Sou muito criativo, tento por minhas ideias de maneira mais
+                            coerente para criar coisas. Me considero uma pessoa despojada.
+                            Desde pequeno desenhava, tendo mais facilidade em colorir, por conta disso pretendo seguir
+                            na carreira de colorista
+                            Sempre gostei de jogos, e de estar no meio desse mundo sempre querendo aprender mais sobre,
+                            tanto na parte de arte e design , e na parte de criar .
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <!--
+                    <img src="../img/saiba.png" class="img-fluid"> -->
+                </div>
+            </div> <!-- Fim .row -->
+        </div>
+    </section>
+
+
     <footer class="mt-4 p-4 bg-warning">
         <div class="d-flex justify-content-center">
             <p>
