--- a/html/pantora.html
+++ b/html/pantora.html
@@ -47,9 +47,23 @@
         </nav>
     </header>
 
+    <section id="home">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 d-flex">
+                    <div class="align-self-center">
+                        <div class="display-2 mb-3"><u>Equipe Técnica</u></div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <img src="../img/Pantora_Logo.png" alt="Cerferus" class="img-fluid">
+                </div>
+            </div> <!-- Fim .row -->
+        </div>
+    </section>
+
     <section class="caixa">
         <div class="container">
-            <div class="display-2 mb-3"><u>Equipe Técnica</u></div>
             <div class="row">
                 <div class="col-md-6 d-flex">
                     <div class="align-self-center">
