--- a/html/dowloads.html
+++ b/html/dowloads.html
@@ -57,7 +57,7 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <!-- <img src="../img/logo_jogo.png" class="img-fluid"> -->
+                        <img src="../img/OTotem.png" class="img-fluid">
                     </div>
                 </div> <!-- Fim .row -->
                 <div class="espacador"></div>
