--- a/html/index.html
+++ b/html/index.html
@@ -113,29 +113,33 @@
                         <img src="../img/Pantora_Logo.png" class="img-fluid">
                         <h4>Pantora</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi a, doloremque minima distinctio
-                            at harum ducimus dolorum ipsa accusantium natus!
+                            Equipe responsável por toda a parte técnica e escrita do Projeto Helenos. Todos os integrantes da equipe Pantora são responsáveis pela qualidade técnica e escrita do trabalho.
                         </p>
                         <a href="pantora.html" class="btn btn-primary w-100" target="_blank" rel="noreferrer noopener">Pantora</a>
                     </div>
                     <div class="col-md-4">
-                        <div class= "">
+                        <div class="">
                             <img src="../img/OTotem.png" class="img-fluid w-100 h-100">
                         </div>
+                        <br> <br>
                         <h4>O Totem</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. In omnis quae laboriosam eligendi
-                            reiciendis corporis ipsum minus commodi!
+                            A documentação completa do Projeto Helenos. <br>
+                            <strong>Obs.:</strong> é permitido o compartilhamento dos documentos do projeto. <br>
+                            <strong>Entretanto</strong> não e permitida a cópia integral de qualquer parte do projeto e <strong>pedimos humildemente que</strong> sejam dados os creditos aos autores do Projeto Helenos. <br>
+                            <hr>
+                            Por favor <strong>NÂO SEJA UM BABACA</strong>! Obrigado &lt;3
                         </p>
+                        <br>
                         <a href="documentacao.html" class="btn btn-primary w-100">Documentação</a>
                     </div>
                     <div class="col-md-4">
                         <img src="../img/Cerferus_Logo.png" class="img-fluid">
                         <h4>Cerferus</h4>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum neque incidunt nostrum beatae
-                            debitis blanditiis vero voluptatibus sapiente illo sunt? Rem!
+                            Equipe responsável por toda a parte artística do Projeto Helenos. Todos os integrantes da equipe Cerferus são responsáveis pela qualidade artística do trabalho.
                         </p>
+                        <br>
                         <a href="cerferus.html" class="btn btn-primary w-100" target="_blank" rel="noreferrer noopener">Cerferus</a>
                     </div>
                 </div> <!-- Fim .row -->
