--- a/html/documentacao.html
+++ b/html/documentacao.html
@@ -53,7 +53,7 @@
             <div class="card">
                 <div class="row">
                     <div class="col-md-6 d-flex justify-content-center">
-                        Arquivo da monografia ou Game Design Document (GDD) do Trabalho de Conclusão de curso do Projeto Helenos - Atenas & Esparta
+                        Arquivo da monografia ou Game Design Document (GDD) do Trabalho de Conclusão de Curso (TCC) do Projeto Helenos - Atenas & Esparta
                     </div>
 
                     <div class="d-sm-block d-md-none p-2"></div>
@@ -68,8 +68,54 @@
                         <a href="../arquivos/monografia.zip" class="btn btn-primary w-100" download="Projeto Helenos - monografia (gdd).zip" type="application/zip">Baixar GDD</a>
                     </div>
                 </div> <!-- /.row -->
-            </div>
-        </div> <!-- /.card -->
+            </div> <!-- /.card -->
+
+            <div class="espacador"></div>
+
+            <div class="card">
+                <div class="row">
+                    <div class="col-md-6 d-flex justify-content-center">
+                        Roteiro do Trabalho de Conclusão de Curso (TCC) do Projeto Helenos - Atenas & Esparta
+                    </div>
+
+                    <div class="d-sm-block d-md-none p-2"></div>
+
+                    <div class="col-md-3 d-flex justify-content-center">
+                        <a href="../arquivos/roteiro.pdf" class="btn btn-primary w-100" target="_blank">Ler Roteiro</a>
+                    </div>
+
+                    <div class="d-sm-block d-md-none p-1"></div>
+
+                    <div class="col-md-3 d-flex justify-content-center">
+                        <a href="../arquivos/roteiro.zip" class="btn btn-primary w-100" download="Projeto Helenos - Roteiro O Totem.zip" type="application/zip">Baixar Roteiro</a>
+                    </div>
+                </div> <!-- /.row -->
+            </div> <!-- /.card -->
+
+            <div class="espacador"></div>
+
+            <div class="card">
+                <div class="row">
+                    <div class="col-md-6 d-flex justify-content-center">
+                        Arquivo de apresentação do Trabalho de Conclusão de Curso (TCC) do Projeto Helenos - Atenas & Esparta
+                    </div>
+
+                    <div class="d-sm-block d-md-none p-2"></div>
+
+                    <div class="col-md-3 d-flex justify-content-center">
+                        <a href="../arquivos/apresentacao.pdf" class="btn btn-primary w-100" target="_blank">Ler Apresentação</a>
+                    </div>
+
+                    <div class="d-sm-block d-md-none p-1"></div>
+
+                    <div class="col-md-3 d-flex justify-content-center">
+                        <a href="../arquivos/apresentacao.zip" class="btn btn-primary w-100" download="Projeto Helenos - Apresentacao O Totem.zip" type="application/zip">Baixar Apresentação</a>
+                    </div>
+                </div> <!-- /.row -->
+            </div> <!-- /.card -->
+
+
+        </div> <!-- /.container -->
     </section>
 
 
