--- a/html/documentacao.html
+++ b/html/documentacao.html
@@ -53,7 +53,9 @@
             <div class="card">
                 <div class="row">
                     <div class="col-md-6 d-flex justify-content-center">
-                        Arquivo da monografia ou Game Design Document (GDD) do Trabalho de Conclusão de Curso (TCC) do Projeto Helenos - Atenas & Esparta
+                        <p>
+                            <strong>Arquivo da monografia ou Game Design Document (GDD)</strong> do Trabalho de Conclusão de Curso (TCC) do Projeto Helenos - Atenas & Esparta
+                        </p>
                     </div>
 
                     <div class="d-sm-block d-md-none p-2"></div>
@@ -75,7 +77,7 @@
             <div class="card">
                 <div class="row">
                     <div class="col-md-6 d-flex justify-content-center">
-                        Roteiro do Trabalho de Conclusão de Curso (TCC) do Projeto Helenos - Atenas & Esparta
+                        <p><strong>Roteiro</strong> do Trabalho de Conclusão de Curso (TCC) do Projeto Helenos - Atenas & Esparta</p>
                     </div>
 
                     <div class="d-sm-block d-md-none p-2"></div>
@@ -97,7 +99,33 @@
             <div class="card">
                 <div class="row">
                     <div class="col-md-6 d-flex justify-content-center">
-                        Arquivo de apresentação do Trabalho de Conclusão de Curso (TCC) do Projeto Helenos - Atenas & Esparta
+                        <p>
+                            <strong>Artbook</strong> do Trabalho de Conclusão de Curso (TCC) do Projeto Helenos - Atenas & Esparta
+                        </p>
+                    </div>
+
+                    <div class="d-sm-block d-md-none p-2"></div>
+
+                    <div class="col-md-3 d-flex justify-content-center">
+                        <a href="../arquivos/Artbook.pdf" class="btn btn-primary w-100" target="_blank">Ver Artbook</a>
+                    </div>
+
+                    <div class="d-sm-block d-md-none p-1"></div>
+
+                    <div class="col-md-3 d-flex justify-content-center">
+                        <a href="../arquivos/Artbook.pdf" class="btn btn-primary w-100" download="Projeto Helenos - Artbook O Totem.zip" type="application/pdf">Baixar Artbook</a>
+                    </div>
+                </div> <!-- /.row -->
+            </div> <!-- /.card -->
+
+            <div class="espacador"></div>
+
+            <div class="card">
+                <div class="row">
+                    <div class="col-md-6 d-flex justify-content-center">
+                        <p>
+                            <strong>Arquivo de apresentação</strong> do Trabalho de Conclusão de Curso (TCC) do Projeto Helenos - Atenas & Esparta
+                        </p>
                     </div>
 
                     <div class="d-sm-block d-md-none p-2"></div>
