--- a/html/index.html
+++ b/html/index.html
@@ -126,9 +126,9 @@
                         <p>
                             A documentação completa do Projeto Helenos. <br>
                             <strong>Obs.:</strong> é permitido o compartilhamento dos documentos do projeto. <br>
-                            <strong>Entretanto</strong> não e permitida a cópia integral de qualquer parte do projeto e <strong>pedimos humildemente que</strong> sejam dados os creditos aos autores do Projeto Helenos. <br>
+                            <strong>Entretanto</strong>, não e permitida a cópia integral de qualquer parte do projeto e <strong>pedimos humildemente que</strong> sejam dados os creditos aos autores do Projeto Helenos. <br>
                             <hr>
-                            Por favor <strong>NÂO SEJA UM BABACA</strong>! Obrigado &lt;3
+                            Por favor <strong><u>NÃO SEJA UM BABACA</u></strong>! Obrigado &lt;3
                         </p>
                         <br>
                         <a href="documentacao.html" class="btn btn-primary w-100">Documentação</a>
