--- a/html/documentacao.html
+++ b/html/documentacao.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="../css/style.css">
 
-    <title>Projeto Helenos - Equipe</title>
+    <title>Projeto Helenos - Documentação</title>
 </head>
 
 <body>
@@ -47,7 +47,6 @@
         </nav>
     </header>
 
-
     <section class="caixa">
         <div class="container">
             <div class="card">
@@ -61,13 +60,13 @@
                     <div class="d-sm-block d-md-none p-2"></div>
 
                     <div class="col-md-3 d-flex justify-content-center">
-                        <a href="../arquivos/monografia.pdf" class="btn btn-primary w-100" target="_blank">Ler GDD</a>
+                        <a href="../arquivos/O Totem - Monografia.pdf" class="btn btn-primary w-100" target="_blank">Ler GDD</a>
                     </div>
 
                     <div class="d-sm-block d-md-none p-1"></div>
 
                     <div class="col-md-3 d-flex justify-content-center">
-                        <a href="../arquivos/monografia.zip" class="btn btn-primary w-100" download="Projeto Helenos - monografia (gdd).zip" type="application/zip">Baixar GDD</a>
+                        <a href="../arquivos/O Totem - Monografia.pdf" class="btn btn-primary w-100" download="Projeto Helenos - monografia (gdd).zip" type="application/zip">Baixar GDD</a>
                     </div>
                 </div> <!-- /.row -->
             </div> <!-- /.card -->
@@ -83,13 +82,13 @@
                     <div class="d-sm-block d-md-none p-2"></div>
 
                     <div class="col-md-3 d-flex justify-content-center">
-                        <a href="../arquivos/roteiro.pdf" class="btn btn-primary w-100" target="_blank">Ler Roteiro</a>
+                        <a href="../arquivos/O Totem - Roteiro.pdf" class="btn btn-primary w-100" target="_blank">Ler Roteiro</a>
                     </div>
 
                     <div class="d-sm-block d-md-none p-1"></div>
 
                     <div class="col-md-3 d-flex justify-content-center">
-                        <a href="../arquivos/roteiro.zip" class="btn btn-primary w-100" download="Projeto Helenos - Roteiro O Totem.zip" type="application/zip">Baixar Roteiro</a>
+                        <a href="../arquivos/O Totem - Roteiro.zip" class="btn btn-primary w-100" download="Projeto Helenos - Roteiro O Totem.zip" type="application/zip">Baixar Roteiro</a>
                     </div>
                 </div> <!-- /.row -->
             </div> <!-- /.card -->
@@ -107,13 +106,13 @@
                     <div class="d-sm-block d-md-none p-2"></div>
 
                     <div class="col-md-3 d-flex justify-content-center">
-                        <a href="../arquivos/Artbook.pdf" class="btn btn-primary w-100" target="_blank">Ver Artbook</a>
+                        <a href="../arquivos/O Totem - Artbook.pdf" class="btn btn-primary w-100" target="_blank">Ver Artbook</a>
                     </div>
 
                     <div class="d-sm-block d-md-none p-1"></div>
 
                     <div class="col-md-3 d-flex justify-content-center">
-                        <a href="../arquivos/Artbook.pdf" class="btn btn-primary w-100" download="Projeto Helenos - Artbook O Totem.zip" type="application/pdf">Baixar Artbook</a>
+                        <a href="../arquivos/O Totem - Artbook.pdf" class="btn btn-primary w-100" download="Projeto Helenos - Artbook O Totem.zip" type="application/pdf">Baixar Artbook</a>
                     </div>
                 </div> <!-- /.row -->
             </div> <!-- /.card -->
@@ -142,10 +141,56 @@
                 </div> <!-- /.row -->
             </div> <!-- /.card -->
 
+            <div class="espacador"></div>
 
+            <div class="card">
+                <div class="row">
+                    <div class="col-md-6 d-flex justify-content-center">
+                        <p>
+                            <strong>Monografia VanBook </strong>. Trabalho de Conclusão de Curso (TCC) do Projeto VanBook (3° Design de Interiores), por Jessica Oliveira de Lima, Melissa Siciliano Leme & Rafaela Gomes da Silva.
+                        </p>
+                    </div>
+
+                    <div class="d-sm-block d-md-none p-2"></div>
+
+                    <div class="col-md-3 d-flex justify-content-center">
+                        <a href="../arquivos/Monografia VanBook.pdf" class="btn btn-primary w-100" target="_blank">Ler Monografia VanBook</a>
+                    </div>
+
+                    <div class="d-sm-block d-md-none p-1"></div>
+
+                    <div class="col-md-3 d-flex justify-content-center">
+                        <a href="../arquivos/Monografia VanBook.pdf" class="btn btn-primary w-100" download="Monografia VanBook" type="application/zip">Baixar Monografia VanBook</a>
+                    </div>
+                </div> <!-- /.row -->
+            </div> <!-- /.card -->
+
+            <div class="espacador"></div>
+            <div class="card">
+                <div class="row">
+                    <div class="col-md-6 d-flex justify-content-center">
+                        <p>
+                            <strong>Monografia HEARTS, CLUBS, DIAMONDS, SPADES:
+                                PLAYERS WHO SUIT MUDS</strong>, por Richard Bartle
+                        </p>
+                    </div>
+
+                    <div class="d-sm-block d-md-none p-2"></div>
+
+                    <div class="col-md-3 d-flex justify-content-center">
+                        <a href="../arquivos/HEARTS, CLUBS, DIAMONDS, SPADES PLAYERS WHO SUIT MUDS.pdf" class="btn btn-primary w-100" target="_blank">Ler Monografia Richard Bartle</a>
+                    </div>
+
+                    <div class="d-sm-block d-md-none p-1"></div>
+
+                    <div class="col-md-3 d-flex justify-content-center">
+                        <a href="../arquivos/HEARTS, CLUBS, DIAMONDS, SPADES PLAYERS WHO SUIT MUDS.pdf" class="btn btn-primary w-100" download="Monografia Richard Bartle - HEARTS, CLUBS, DIAMONDS, SPADES:
+                            PLAYERS WHO SUIT MUDS" type="application/zip">Baixar Monografia Richard Bartle</a>
+                    </div>
+                </div> <!-- /.row -->
+            </div> <!-- /.card -->
         </div> <!-- /.container -->
     </section>
-
 
     <footer class="mt-4 p-4 bg-warning">
         <div class="d-flex justify-content-center">
