--- a/html/equipe.html
+++ b/html/equipe.html
@@ -99,14 +99,10 @@
                         <h2>Samir Leno</h2>
                         <p>
                             Sou o <strong>Samir Leno</strong> e sou um espartano.<br>
-                            Sou o responsável por criar o desing dos personagens, cenário e criar logos. Também sou o
-                            auxiliar de música da equipe.
+                            Sou o responsável por criar o design dos personagens, cenário, logos e animações. 
                             <hr class="linha">
-                            <strong>Sobre mim:</strong> comecei a desenhar de maneira mais frequente a partir dos 11
-                            anos de idade e venho tentando melhorar minhas habilidades nesses últimos 5 anos. <br>
-                            Ganhei meu violão com 8 anos de idade e comecei a tratar ele como um instrumento de fato a
-                            partir dos 12 anos, venho estudando o instrumento desde lá, aos 14 anos eu migrei e me
-                            encontrei no baixo.
+                            <strong>Sobre mim:</strong> comecei a desenhar de maneira mais frequente a partir dos 11 anos de idade e venho tentando melhorar minhas habilidades nesses últimos anos.
+                            Desde pequeno amei animações e pretendo seguir carreira como designer gráfico, com foco em animação e design para jogos, demonstro felicidade em auxiliar e ensinar no que eu for capaz. 
                         </p>
                     </div>
                 </div>
