--- a/html/pantora.html
+++ b/html/pantora.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="../css/style.css">
 
-    <title>Projeto Helenos - Equipe</title>
+    <title>Projeto Helenos - Pantorade</title>
 </head>
 
 <body>
